[tool.poetry]
name = "podcast_phone_download"
version = "0.1.0"
description = "Script to be run on my phone to download podcast files from a Python http.server instance"
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.16"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
